<resources>
    <string name="app_name">COMP4521Project</string>
    <string name="title_home">Home</string>
    <string name="title_weekly">Weekly</string>
    <string name="title_monthly">Monthly</string>
    <string name="title_financialhelper">FinancialHelper</string>
    <string name="title_setting">Setting</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="AddEventTitle">Add an Event</string>
    <string name="titleLabel">Title:</string>
    <string name="descriptionLabel">Description:</string>
    <string name="companyLabel">Company:</string>
    <string name="dateLabel">Date:</string>
    <string name="startingTimeLabel">Starting Time:</string>
    <string name="endingTimeLabel">Ending Time:</string>
    <string name="incomeLabel">Income:</string>
    <string name="remarkLabel">Remark:</string>
    <string name="titleHint">Title</string>
    <string name="messageHolder">Message</string>
    <string name="monthbefore"><![CDATA[<<]]></string>
    <string name="monthafter"><![CDATA[>>]]></string>
    <string name="monthTV">Month</string>
    <string name="weekdaySUN">SUN</string>
    <string name="weekdayMON">MON</string>
    <string name="weekdayTUE">TUE</string>
    <string name="weekdayWED">WED</string>
    <string name="weekdayTHUR">THUR</string>
    <string name="weekdayFRI">FRI</string>
    <string name="weekdaySAT">SAT</string>
    <string name="cellDay">Day</string>
    <string name="FinancialHelperTitle">Financial Helper</string>
    <string name="From">From:</string>
    <string name="To">To:</string>
    <string name="Target">Target:</string>
    <string name="Done">Done</string>
    <string name="financialDefaultTarget">0.00</string>
    <string name="ConfirmEventTitle">Event Confirmation</string>

    <string name="weekbefore"><![CDATA[<<]]></string>
    <string name="weekafter"><![CDATA[>>]]></string>
    <string name="Time">Time</string>
    <string name="wordsInTimetable">XX:XX</string>
    <string name="Delete">Delete</string>
    <string name="ReviewEventTitle">Review Event</string>
    <string name="Notification">Notification</string>
    <string name="home_calendar">Calendar</string>
    <string name="today_work">Todays\' schedule</string>
    <string name="home_confirm_event">Confirm event</string>
    <string name="home_financial_helper">Financial Helper</string>
</resources>