<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_weekly"
        android:icon="@drawable/baseline_view_week_24"
        android:title="@string/title_weekly" />

    <item
        android:id="@+id/navigation_monthly"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/title_monthly" />

    <item
        android:id="@+id/navigation_financialhelper"
        android:icon="@drawable/baseline_attach_money_24"
        android:title="@string/title_financialhelper" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/title_setting" />
</menu>