<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.comp4521project.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_weekly"
        android:name="com.example.comp4521project.ui.weekly.WeeklyFragment"
        android:label="@string/title_weekly"
        tools:layout="@layout/fragment_weekly" />

    <fragment
        android:id="@+id/navigation_monthly"
        android:name="com.example.comp4521project.ui.monthly.MonthlyFragment"
        android:label="@string/title_monthly"
        tools:layout="@layout/fragment_monthly" />

    <fragment
        android:id="@+id/navigation_financialhelper"
        android:name="com.example.comp4521project.ui.financialhelper.FinancialHelperFragment"
        android:label="@string/title_financialhelper"
        tools:layout="@layout/fragment_financialhelper" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.comp4521project.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>