<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventIntent">

    <TextView
        android:id="@+id/confirmEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/ConfirmEventTitle"
        android:textColor="#6200ED"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/confirmEventTitleField"
        android:layout_width="272dp"
        android:layout_height="49dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/titleHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmEventTitle" />

    <TextView
        android:id="@+id/confirmEventDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/descriptionLabel"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmEventTitleLabel" />

    <EditText
        android:id="@+id/confirmEventDescriptionField"
        android:layout_width="354dp"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmEventDescriptionLabel" />

    <Spinner
        android:id="@+id/confirmEventEndMinute"
        android:layout_width="96dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmEventStartMinute" />

    <Spinner
        android:id="@+id/confirmEventEndHour"
        android:layout_width="96dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/confirmEventEndMinute"
        app:layout_constraintTop_toBottomOf="@+id/confirmEventStartHour" />

    <Spinner
        android:id="@+id/confirmEventStartHour"
        android:layout_width="95dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/confirmEventStartMinute"
        app:layout_constraintTop_toBottomOf="@+id/confirmEventDateField" />

    <Spinner
        android:id="@+id/confirmEventStartMinute"
        android:layout_width="95dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmEventDateField" />

    <TextView
        android:id="@+id/confirmEventCompanyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/companyLabel"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmEventDescriptionField" />

    <EditText
        android:id="@+id/confirmEvenCompanyField"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmEventCompanyLabel" />

    <Button
        android:id="@+id/confirmEventDateField"
        style="?android:spinnerStyle"
        android:layout_width="278dp"
        android:layout_height="49dp"

        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:outlineProvider="bounds"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmEvenCompanyField" />

    <TextView
        android:id="@+id/confirmEventDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/dateLabel"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmEvenCompanyField" />

    <EditText
        android:id="@+id/confirmEventIncomeField"
        android:layout_width="254dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0.00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmEventEndHour" />

    <TextView
        android:id="@+id/confirmEventTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/titleLabel"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmEventTitle" />

    <EditText
        android:id="@+id/confirmEventRemarkField"
        android:layout_width="351dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/confirmDeleteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmEventRemarkLabel" />

    <TextView
        android:id="@+id/confirmEventStartingTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/startingTimeLabel"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmEventDateLabel" />

    <TextView
        android:id="@+id/confirmEventEndingTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/endingTimeLabel"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmEventStartingTimeLabel" />

    <TextView
        android:id="@+id/confirmEventIncomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/incomeLabel"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmEventEndingTimeLabel" />

    <TextView
        android:id="@+id/confirmEventRemarkLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/remarkLabel"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmEventIncomeLabel" />

    <Button
        android:id="@+id/confirmCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#B3B3B3"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/confirmDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#F44336"
        android:text="@string/Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirmCancelButton"
        app:layout_constraintStart_toEndOf="@+id/confirmCompleteButton" />

    <Button
        android:id="@+id/confirmCompleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>